# CUDA-At-Scale-For-Enterprise-Final-Project-V1

./: CMakeLists.txt  INSTALL  LICENSE  README.md  cudaAtScaleLib_global.h  run.sh  write_header.py
cudaGPA/: CMakeLists.txt
cudaGPA/include/: cuda_gpabf.hpp
cudaGPA/sources/: cudaGPA.cu  types.cu  types.cuh  utils.hpp
gpa/: CMakeLists.txt
include/: nppi_extra_image_filtering.hpp
neif/: CMakeLists.txt
neif/sources/: gpa.internal.cpp  gpa.internal.hpp  nppi_extra_image_filtering.cpp  utils.hpp
samples/: CMakeLists.txt
samples/internal/: test.utils.hpp  test.utils.hpp.in
samples/sources/: demo1.cpp  demo2.cpp  test.utils.hpp
samples_gpa_lib/: CMakeLists.txt
samples_gpa_lib/include/: gpa.hpp
samples_gpa_lib/sources/: gpa.cpp
